--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
       name="description"
       content="Verrocchio - Modern art-commission marketplace connecting artists and buyers through swipe-based discovery"
     />
-    <link rel="apple-touch-icon" href="/creao_icon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="manifest" href="/manifest.json" />
     <title>Verrocchio - Art Commission Marketplace</title>
   </head>
   <body>
     <div id="app"></div>
-    <script defer src="/creao-runtime/index.js?t=1764116069&v=338748745c7692d3c95ae47e6853de6a39fdc0f6"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
